fix(layout): use xxs token for expanded page spacing (#1551)

--- a/src/global/styles/mixins/layout.scss
+++ b/src/global/styles/mixins/layout.scss
@@ -11,7 +11,7 @@
 }
 
 @mixin page-spacing-expanded {
-  padding-inline: var(--sbb-spacing-responsive-xs);
+  padding-inline: var(--sbb-spacing-responsive-xxs);
 }
 
 @mixin grid-base {
